correct font color on mobile

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -174,6 +174,9 @@ img {
       padding-bottom: 1rem;
     }
   }
+  .html p, .html h4, .html a {
+    color: $color-white;
+  }
 }
 
 .facts {
